--- a/TurizmAcenteSistemi/src/view/EmployeeView.form
+++ b/TurizmAcenteSistemi/src/view/EmployeeView.form
@@ -187,7 +187,7 @@
                       <text value="Giriş Tarihi (yyyy-mm-dd)"/>
                     </properties>
                   </component>
-                  <component id="59da2" class="javax.swing.JFormattedTextField" binding="fld_strt_date">
+                  <component id="59da2" class="javax.swing.JFormattedTextField" binding="fld_strt_date" custom-create="true">
                     <constraints>
                       <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="150" height="-1"/>
@@ -203,7 +203,7 @@
                       <text value="Çıkış Tarihi (yyyy-mm-dd)"/>
                     </properties>
                   </component>
-                  <component id="c2728" class="javax.swing.JFormattedTextField" binding="fld_fnsh_date">
+                  <component id="c2728" class="javax.swing.JFormattedTextField" binding="fld_fnsh_date" custom-create="true">
                     <constraints>
                       <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="150" height="-1"/>
@@ -278,7 +278,21 @@
             </constraints>
             <properties/>
             <border type="none"/>
-            <children/>
+            <children>
+              <scrollpane id="e9680" binding="scrl_reservation">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="b34dd" class="javax.swing.JTable" binding="tbl_reservation">
+                    <constraints/>
+                    <properties/>
+                  </component>
+                </children>
+              </scrollpane>
+            </children>
           </grid>
         </children>
       </tabbedpane>
