--- a/TurizmAcenteSistemi/src/view/EmployeeView.form
+++ b/TurizmAcenteSistemi/src/view/EmployeeView.form
@@ -93,7 +93,7 @@
                   </scrollpane>
                 </children>
               </grid>
-              <grid id="7548f" binding="pnl_add_btn" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="7548f" binding="pnl_add_btn" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -114,6 +114,14 @@
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                   </hspacer>
+                  <component id="9ed0e" class="javax.swing.JButton" binding="btn_clear">
+                    <constraints>
+                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Sıfırla"/>
+                    </properties>
+                  </component>
                 </children>
               </grid>
             </children>
@@ -187,14 +195,6 @@
                       <text value="Giriş Tarihi (yyyy-mm-dd)"/>
                     </properties>
                   </component>
-                  <component id="59da2" class="javax.swing.JFormattedTextField" binding="fld_strt_date" custom-create="true">
-                    <constraints>
-                      <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                        <preferred-size width="150" height="-1"/>
-                      </grid>
-                    </constraints>
-                    <properties/>
-                  </component>
                   <component id="a1198" class="javax.swing.JLabel" binding="lbl_fnsh_date">
                     <constraints>
                       <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -202,14 +202,6 @@
                     <properties>
                       <text value="Çıkış Tarihi (yyyy-mm-dd)"/>
                     </properties>
-                  </component>
-                  <component id="c2728" class="javax.swing.JFormattedTextField" binding="fld_fnsh_date" custom-create="true">
-                    <constraints>
-                      <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                        <preferred-size width="150" height="-1"/>
-                      </grid>
-                    </constraints>
-                    <properties/>
                   </component>
                   <component id="28717" class="javax.swing.JLabel" binding="lbl_adult_count">
                     <constraints>
@@ -225,7 +217,9 @@
                         <preferred-size width="150" height="-1"/>
                       </grid>
                     </constraints>
-                    <properties/>
+                    <properties>
+                      <text value="1"/>
+                    </properties>
                   </component>
                   <component id="a7158" class="javax.swing.JLabel" binding="lbl_child_count">
                     <constraints>
@@ -241,7 +235,9 @@
                         <preferred-size width="150" height="-1"/>
                       </grid>
                     </constraints>
-                    <properties/>
+                    <properties>
+                      <text value="0"/>
+                    </properties>
                   </component>
                   <component id="f73a4" class="javax.swing.JButton" binding="btn_room_search">
                     <constraints>
@@ -266,6 +262,22 @@
                     <properties>
                       <text value="Sıfırla"/>
                     </properties>
+                  </component>
+                  <component id="a7675" class="javax.swing.JFormattedTextField" binding="fld_strt_date" custom-create="true">
+                    <constraints>
+                      <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                        <preferred-size width="150" height="-1"/>
+                      </grid>
+                    </constraints>
+                    <properties/>
+                  </component>
+                  <component id="d7076" class="javax.swing.JFormattedTextField" binding="fld_fnsh_date" custom-create="true">
+                    <constraints>
+                      <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                        <preferred-size width="150" height="-1"/>
+                      </grid>
+                    </constraints>
+                    <properties/>
                   </component>
                 </children>
               </grid>
